# statix-agent

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  version.json
.github/workflows/: build.yml
installers/archlinux/: install.sh  statix-agent.service  update.sh
installers/ubuntu/24.04/: install.sh  statix-agent-update.service  statix-agent.service
nix/: module.nix  package.nix
scripts/: README.md  build-release.sh
src/: config.rs  enrollment.rs  logs.rs  main.rs  metrics.rs  networking.rs  system_info.rs  wireguard.rs
src/jobs/: mod.rs
src/jobs/runners/: container.rs  host.rs  microvm.rs  mod.rs
src/jobs/runners/container/: archive.rs  diagnostics.rs  dns.rs  image.rs  lxc.rs  mod.rs  network.rs  runner.rs  shell.rs
src/jobs/runners/microvm/: guest.rs  image.rs  project.rs  qemu.rs  runner.rs  util.rs
src/logs/: emit.rs  format.rs  process.rs
src/metrics/: mod.rs  network.rs
src/metrics/cpu/: mod.rs
src/metrics/disk/: mod.rs
src/metrics/memory/: mod.rs
src/networking/: commands.rs  state.rs
statix/: .statix-lock.json  spec.yaml  statix.yaml
statix/env/: local.yaml
statix/hooks/: post-deploy.sh  pre-deploy.sh
statix/jobs/: test.yaml
statix/policies/: default.yaml
statix/tasks/: test.yaml
