[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "statix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive"] }
futures-util = "0.3.32"
hex = "0.4.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tokio = { version = "1.47.1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
